--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "recharts": "^3.6.0",
+    "lucide-react": "^0.562.0",
+    "@google/genai": "^1.36.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2"
   },
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
