--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nebula"
 version = "0.1.0"
-description = "A Tauri App"
+description = "High-performance native-style VDI client for accessing cloud desktops and virtual applications."
 authors = ["you"]
 edition = "2021"
 
